[package]
name = "bureau"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bureau-server"
path = "src/bin/server.rs"

[[bin]]
name = "bureau-client"
path = "src/bin/client.rs"

[[bench]]
name = "search_in_block"
harness = false

[dependencies]
anyhow = "1.0.95"
bloomfilter = "3.0.1"
bytes = "1.9.0"
clap = { version = "4.5.26", features = ["derive"] }
crc32fast = "1.4.2"
futures = { version = "0.3.31", features = ["thread-pool"] }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "ansi", "env-filter", "tracing-log"] }
uuid = { version = "1.11.0", features = ["v7"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
random-string = "1.1.0"
tracing-test = "0.2.5"
