[package]
name = "bureau"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bureau-server"
path = "src/bin/server.rs"

[[bin]]
name = "bureau-client"
path = "src/bin/client.rs"

[[bin]]
name = "bureau-demo"
path = "src/bin/demo.rs"

[[bench]]
name = "search_in_block"
harness = false

[dependencies]
anyhow = "1.0.98"
bloomfilter = "3.0.1"
bytes = "1.10.1"
rand = "0.9.1"
clap = { version = "4.5.38", features = ["derive"] }
crc32fast = "1.4.2"
futures = { version = "0.3.31", features = ["thread-pool"] }
tokio = { version = "1.45.0", features = ["full", "tracing"] }
socket2 = "0.5.10"
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "ansi", "env-filter", "tracing-log"] }
uuid = { version = "1.16.0", features = ["v7"] }
strum = { version = "0.27.1", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
parking_lot = "0.12.3"
ahash = "0.8.11"
num-traits = "0.2.19"
color-eyre = "0.6.3"

[dev-dependencies]
criterion = "0.5.1"
random-string = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
tracing-test = "0.2.5"
